fix: update reset button background color for improved visibility

--- a/src/css/questionnaire.css
+++ b/src/css/questionnaire.css
@@ -125,7 +125,7 @@
 #resetButton {
   /* display: none; */
   padding: 6px 10px;
-  background: #dc3545;
+  background: #ee6573;
   color: white;
   border: none;
   border-radius: 4px;
